# darknet-cti-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: __init__.py  config_loader.py  crawler_config.example.yaml  crawler_config.yaml  elastic_config.yaml  nlp_config.yaml
consumer/: __init__.py  data_processor.py  elasticsearch_client.py  nlp_processor.py
crawler/: session_manager.py  state_manager.py  tor_manager.py
crawler/darknet_scraper/: scrapy.cfg
crawler/darknet_scraper/darknet_scraper/: items.py  middlewares.py  pipelines.py  session_manager.py  settings.py  state_manager.py  tor_manager.py
crawler/darknet_scraper/darknet_scraper/spiders/: __init__.py  darknet_spider.py
crawler/darknet_scraper/data/debug_html/: f3e63689ba51.html
docs/: architecture.md  architecture_diagrams.md
docs/diagrams/: context_diagram.puml  data_flow_sequence.puml  deployment_view.puml  logical_architecture.mmd  threat_scoring.mmd
scripts/: check_es.py  diagnose_stack.sh  run_crawler.py  run_processor.py
tests/: conftest.py  test_darknet_spider.py  test_elasticsearch_client.py  test_nlp_processor.py
tools/: session_helper.py
