[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "darknet-cti-platform"
version = "0.1.0"
description = "Cyber Threat Intelligence Darknet crawling and NLP pipeline"
authors = [ { name = "Eya Kadri" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scrapy>=2.11",
    "spacy==3.7.5",
    "redis>=5.0",
    "stem>=1.8",
    "PyYAML>=6.0",
    "beautifulsoup4>=4.12",
    "pysocks==1.7.1",
    "requests==2.32.3",
    "lxml==5.3.0",
    "elasticsearch>=8.0.0,<9.0.0"
]

[tool.pytest.ini_options]
python_files = "tests/test_*.py"
addopts = "-q"
